--- a/doc/examples/rgb_composite/rgb_composite.ui
+++ b/doc/examples/rgb_composite/rgb_composite.ui
@@ -34,10 +34,13 @@
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
      <property name="margin">
-      <number>10</number>
+      <number>0</number>
      </property>
      <item>
       <layout class="QHBoxLayout" name="previewImageContainer">
+       <property name="topMargin">
+        <number>10</number>
+       </property>
        <item>
         <spacer name="spacer">
          <property name="orientation">
@@ -90,6 +93,12 @@
      </item>
      <item>
       <layout class="QHBoxLayout" name="dateForm">
+       <property name="leftMargin">
+        <number>10</number>
+       </property>
+       <property name="rightMargin">
+        <number>10</number>
+       </property>
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
@@ -117,6 +126,9 @@
      </item>
      <item>
       <layout class="QHBoxLayout" name="wavelengthForm">
+       <property name="margin">
+        <number>10</number>
+       </property>
        <item>
         <layout class="QVBoxLayout" name="redContainer">
          <item>
