--- a/sunpy/gui/ui/mainwindow/mainwindow.ui
+++ b/sunpy/gui/ui/mainwindow/mainwindow.ui
@@ -39,6 +39,15 @@
       <property name="currentIndex">
        <number>-1</number>
       </property>
+      <property name="elideMode">
+       <enum>Qt::ElideNone</enum>
+      </property>
+      <property name="tabsClosable">
+       <bool>true</bool>
+      </property>
+      <property name="movable">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
    </layout>
@@ -50,7 +59,7 @@
      <x>0</x>
      <y>0</y>
      <width>662</width>
-     <height>25</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
